fixed search bar css to align with other search bars in other tools

--- a/CoreSchemaView/src/au/gov/asd/tac/constellation/views/schemaview/resources/schema-view.css
+++ b/CoreSchemaView/src/au/gov/asd/tac/constellation/views/schemaview/resources/schema-view.css
@@ -3,7 +3,7 @@
     -fx-background-color: rgb(30,144,255); -fx-padding: 2 5 2 5;
 }
 
-.text-field{    
-    -fx-text-inner-color: black;
-    -fx-control-inner-background: lightgrey;
+.text-field {    
+    -fx-text-inner-color: white;
+    -fx-prompt-text-fill: grey;
 }
